Prevent small speech bubble jump when becoming populated

--- a/assets/sass/patterns/atoms/speech-bubble.scss
+++ b/assets/sass/patterns/atoms/speech-bubble.scss
@@ -45,6 +45,10 @@
 
   }
 
+  & [data-visible-annotation-count] {
+    display: inline-block;
+  }
+
 }
 
 .speech-bubble--inline {
